--- a/public/css/style.css
+++ b/public/css/style.css
@@ -10916,4 +10916,4 @@ Dark Mode
 }
 .is_dark .faqarea__wrapper .accordion-body {
   background: var(--whiteColor);
-}/*# sourceMappingURL=style.css.map */
+}
