--- a/public/scss/style.css
+++ b/public/scss/style.css
@@ -11860,4 +11860,4 @@ Dark Mode
 }
 .is_dark .headerarea .mega__menu__thumb__label {
   color: var(--blackColor);
-}/*# sourceMappingURL=style.css.map */
+}
